<resources>
    //activity_initial_survey.xml
    <string name="app_name">Apps for Good</string>
    <string name="homePageText">NextRead</string>
    <string name="feedbackText"><a href="https://forms.gle/kRf4J389cLDB9b2UA">Press to give feedback</a></string>
    <string name="logoContentDescriptionText">APP LOGO</string>
    <string name="langQText">What language (as a <a href="http://loc.gov/standards/iso639-2/php/code_list.php">Alpha-3/ISO 639-2 Language Code</a>) should the book be written in?</string>
    <string name="authorQText">Who is your favorite author?</string>
    <string name="lengthQText">What book length do you prefer?</string>
    <string name="dateQText">What publication time period do you prefer?</string>

    <string name="authorRankingText">On a scale of 0 (not at all) to 10 (essential), how much does author impact your book preferences?</string>
    <string name="lengthRankingText">On a scale of 0 (not at all) to 10 (essential), how much does length impact your book preferences?</string>
    <string name="dateRankingText">On a scale of 0 (not at all) to 10 (essential), how much does publication year impact your book preferences?</string>
    <string name="avgRatingRankingText">On a scale of 0 (not at all) to 10 (essential), how much does average rating impact your book preferences?</string>
    <string name="popularityRankingText">On a scale of 0 (not at all) to 10 (essential), how much does book popularity impact your preferences?</string>

    <string name="langOptionsText">Type in the alpha-3/ISO 639-2 code of your preferred language.</string>
    <string name="langCodeHyperlinkText">Alpha-3/ISO 639-2 Language Codes</string>
    <string name="authorHintText">Type in your favorite author.</string>
    <string name="shortLengthOptionText">Short: Less Than 200 Pages</string>
    <string name="mediumLengthOptionText">Medium: 200 to 500 Pages</string>
    <string name="longLengthOptionText">Long: Over 500 Pages</string>
    <string name="early1900sOptionText">Early 1900s: 1900-1950</string>
    <string name="late1900sOptionText">Late 1900s: 1950-2000</string>
    <string name="modern2000sOptionText">2000s</string>
    <string name="button" />

    <string name="initialSurveyTitleText">Initial Survey</string>

    <string name="beginClickButton">Press to Get Book Suggestions</string>
    <string name="saveDataToggleDescriptionText">Toggle to save initial survey data.</string>
    <string name="continueButtonText">Continue</string>

    //activity_display_books.xml
    <string name="bookSuggestionsTitleText">Suggested Books</string>
    <string-array name="book_Title">
        <item></item>
    </string-array>
    <string name="titleLabelText">Title</string>
    <string name="authorLabelText">Author(s)</string>
    <string name="isbnLabelText">ISBN</string>

    //activity_feedback.xml
    <string name="feedbackPromptingText">Please do not hesitate to contact us by email (ENTER EMAIL ADDRESS). Or, feel free to share your concerns, suggestions, and feedback through the anonymous Google Form below.</string>
    <string name="feedbackPageTitleText">Feedback</string>
</resources>