<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayBooks">

    <TextView
        android:id="@+id/bookSuggestionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bookSuggestionsTitleText"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollHorizontalTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="10dp"
        android:fadeScrollbars="false"
        android:scrollbarSize="15dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarFadeDuration="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/displayTable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:stretchColumns="0,1,2">

            <TableRow
                android:id="@+id/titleRow"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"

                android:background="#000000">

                <TextView
                    android:id="@+id/titleLabel"
                    android:layout_width="73dp"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/titleLabelText"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/authorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/authorLabelText"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/isbnLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/isbnLabelText"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/suggestion1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000">

                <TextView
                    android:id="@+id/suggestion1Title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion1Author"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion1ISBN"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>


            <TableRow
                android:id="@+id/suggestion2"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000">

                <TextView
                    android:id="@+id/suggestion2Title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion2Author"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion2ISBN"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:id="@+id/suggestion3"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000">

                <TextView
                    android:id="@+id/suggestion3Title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion3Author"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion3ISBN"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:id="@+id/suggestion4"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000">

                <TextView
                    android:id="@+id/suggestion4Title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion4Author"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion4ISBN"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:id="@+id/suggestion5"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000">

                <TextView
                    android:id="@+id/suggestion5Title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion5Author"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/suggestion5ISBN"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text=" Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

        </TableLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>